--- a/src/sass/page/_award-2021.scss
+++ b/src/sass/page/_award-2021.scss
@@ -183,7 +183,8 @@
 
                 .bottom {
                     display: grid;
-                    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                    // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                    grid-template-columns: 1fr 1fr 1fr 1fr;
                     gap: 30px;
                     padding-top: 3rem;
 
@@ -215,6 +216,14 @@
                             font-weight: 400;
                             margin: 1rem 0;
                         }
+                    }
+
+                    @include pad {
+                        grid-template-columns: 1fr 1fr;
+                    }
+    
+                    @include mobile{
+                        grid-template-columns: 1fr;
                     }
                 }
             }
