首頁樣式調整

--- a/src/sass/base/_var.scss
+++ b/src/sass/base/_var.scss
@@ -9,7 +9,7 @@ $c-primary-deep:#DD4B4B;
 $c-secondary:#CE8B52;
 $c-secondary-deep:#C15E0B;
 $c-secondary-light:#DDB593;
-$c-secondary-white:#F7F1E7;
+$c-secondary-white:#F7F3EC;
 $c-black:#000000;
 $c-gray:#505050;
 $c-white:white;
