--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -100,6 +100,10 @@ footer{
 
         input{
             @include f-flexBasis(50%);
+            &::placeholder{
+                font-weight: 700;
+                color: #8B8B8B;
+            }
         }
         button{
             @include f-flexBasis(30%);
@@ -114,14 +118,16 @@ footer{
     gap:52px;
     padding: 20px 0px;
     @include mini-pad{
-        @include flex($d:column,$j-c:center,$a-i:center);
-        gap:8px;
+        @include flex($j-c:center,$a-i:center);
+        gap:24px;
+        padding: 10px 20px;
     }
     p{
         font-size: 12px;
     }
     .tag{
         color: $c-black;
+        line-height: 1.7;
         &:hover{
             color:$c-primary;
             -webkit-transition: all 0.3s ease;
