--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -279,7 +279,7 @@ nav{
     display: block;
     width: 100%;
     height: 3px;
-    background: #aaa;
+    background: $c-primary;
     transition: .3s;
 }
 
