--- a/src/sass/page/_happiness-job.scss
+++ b/src/sass/page/_happiness-job.scss
@@ -75,7 +75,7 @@
                 }
             }
 
-            @include mobile{
+            @media only screen and (max-width: 1200px){
                 flex-wrap: wrap;
             }
         }
