header：logo摘掉網址、幸福職涯和精選新聞連結取消 style：增加disable樣式

--- a/pro/assets/css/main.css
+++ b/pro/assets/css/main.css
@@ -7125,6 +7125,10 @@ p,
   }
 }
 
+.disable {
+  color: #b2b2b2 !important;
+}
+
 .btn {
   width: -webkit-fit-content;
   width: -moz-fit-content;
